package NYT.NJobProberClient.NProto;

import "yt/ytlib/controller_agent/proto/job.proto";

import "yt_proto/yt/core/misc/proto/error.proto";
import "yt_proto/yt/core/misc/proto/guid.proto";

////////////////////////////////////////////////////////////////////////////////

message TReqDumpInputContext
{
    required NYT.NProto.TGuid job_id = 1;
    optional NYT.NProto.TGuid transaction_id = 2;
}

message TRspDumpInputContext
{
    repeated NYT.NProto.TGuid chunk_ids = 1;
}

message TReqGetStderr
{
    required NYT.NProto.TGuid job_id = 2;
    optional int64 limit = 3;
    optional int64 offset = 4;
}

message TRspGetStderr
{
    required bytes stderr_data = 1;
    optional int64 end_offset = 2;
    optional int64 total_size = 3;
}

message TReqGetFailContext
{
    required NYT.NProto.TGuid job_id = 2;
}

message TRspGetFailContext
{
    required bytes fail_context_data = 1;
}

message TReqGetSpec
{
    required NYT.NProto.TGuid job_id = 1;
}

message TRspGetSpec
{
    required NYT.NControllerAgent.NProto.TJobSpec spec = 1;
}

message TReqPollJobShell
{
    required NYT.NProto.TGuid job_id = 1;
    // Parameters in YSON format. This value is set by user.
    required string parameters = 2;
    // Path to subconatainer in which job shell
    // should be run. This value is set by scheduler.
    optional string subcontainer = 3;
}

message TRspPollJobShell
{
    // Result in YSON format.
    required string result = 1;

    // Yson map fragment, serialized into string.
    // These additional attributes are used for SOC audit via job shell structured logging.
    optional string logging_context = 2;
}

message TReqInterrupt
{
    required NYT.NProto.TGuid job_id = 1;
    optional int64 timeout = 2;
    optional int32 interruption_reason = 3;
}

message TRspInterrupt
{ }

message TReqFail
{
    required NYT.NProto.TGuid job_id = 1;
}

message TRspFail
{ }

message TReqAbort
{
    required NYT.NProto.TGuid job_id = 1;
    required NYT.NProto.TError error = 2;
}

message TRspAbort
{ }

message TReqDumpSensors
{ }

message TRspDumpSensors
{ }

message TReqDumpJobProxyLog
{
    required NYT.NProto.TGuid job_id = 1;
    required string path = 2; // YPath
    required NYT.NProto.TGuid transaction_id = 3;
}

message TRspDumpJobProxyLog
{ }

////////////////////////////////////////////////////////////////////////////////
